   Reports 'Idle' when an agent is free.

 * The configuration options eventwhencalled and eventmemberstatus have been
   removed.  As a result, the AMI events QueueMemberStatus, AgentCalled,
   AgentConnect, AgentComplete, AgentDump, and AgentRingNoAnswer will always be
   sent.  The "Variable" fields will also no longer exist on the Agent* events.

ResetCDR
------------------
 * The 'e' option has been deprecated. Use the CDR_PROP function to re-enable
   CDRs when they were previously disabled on a channel.
 * The 'w' and 'a' options have been removed. Dispatching CDRs to registered
   backends occurs on an as-needed basis in order to preserve linkedid
   propagation and other needed behavior.

SetAMAFlags
------------------
 * This application is deprecated in favor of the CHANNEL function.

UserEvent
------------------
 * UserEvent will now handle duplicate keys by overwriting the previous value
   assigned to the key. UserEvent invocations will also be distributed to any
   interested res_stasis applications.


Build System
------------------
 * Asterisk now optionally uses libxslt to improve XML documentation generation
   and maintainability. If libxslt is not available on the system, some XML
   documentation will be incomplete.


Core
------------------
 * Redirecting reasons can now be set to arbitrary strings. This means
   that the REDIRECTING dialplan function can be used to set the redirecting
   reason to any string. It also allows for custom strings to be read as the
   redirecting reason from SIP Diversion headers.

 * For DTMF blind and attended transfers, the channel variable TRANSFER_CONTEXT
   must be on the channel initiating the transfer to have any effect.

 * The channel variable ATTENDED_TRANSFER_COMPLETE_SOUND is no longer channel
   driver specific.  If the channel variable is set on the transferrer channel,
   the sound will be played to the target of an attended transfer.
